test/parser/positive/ArbitraryLocalDeclaration.java
public class ArbitraryLocalDeclaration {
  public ArbitraryLocalDeclaration() {}
  public void m() {
    int x = 42;
    x = x+1;
    int y = x+87;
  }
}
